--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply text-white bg-gray-800;
+    background-image: var(--wiggles-bg);
+    overscroll-behavior-y: none;
+}
